--- a/MySocialNetwork/SocNet/templates/SocNet/allUsers.html
+++ b/MySocialNetwork/SocNet/templates/SocNet/allUsers.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %} 
 {% block content %} 
-<h1> List of USERS! :D </h1>
+<h1> List of USER LINK! :D </h1>
 {% if user_list %} 
      <ul>
        {% for user in user_list %} 
        <li>
-         {{ user.username }}
+         {{ user }}
        </li> 
        {% endfor %} 
     </ul> 
   {% else %} 
-  	You don't have any users! 
+  	There aren't any user links!
   {% endif %} 
 
 {% endblock %}
